--- a/package.json
+++ b/package.json
@@ -1,11 +1,52 @@
 {
+  "name": "fronted",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@react-pdf/renderer": "^3.3.8",
-    "bootstrap": "^5.3.2",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "react-bootstrap": "^2.10.0",
-    "react-router-dom": "^6.22.0"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "cd shop_frontend && npm start",
+    "dev:backend": "cd shop_backend && nodemon server.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+
+
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.4.1"
   }
 }
