--- a/shop_BackEnd/package.json
+++ b/shop_BackEnd/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3"
   }
 }
