--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "jspdf": "^2.5.1",
     "react-bootstrap": "^2.10.0",
     "react-router-dom": "^6.22.0"
+  },
+  
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "cd shop_frontend && npm start",
+    "dev:backend": "cd shop_backend && nodemon server.js"
   }
 }
