--- a/shop_frontend/package.json
+++ b/shop_frontend/package.json
@@ -13,9 +13,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "firebase": "^10.8.0",
+    "jspdf": "^2.5.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
