--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,13 +1,12 @@
 {
     "version":2,
-    "name": "shop_backend",
     "builds": [
-        { "src": "app.js", "use": "@vercel/node" }
+        { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes" : [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/server.js"
         }
     ]
 }
