--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,12 +1,12 @@
 {
     "version":2,
     "builds": [
-        { "src": "server.js", "use": "@vercel/node" }
+        { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes" : [
         {
             "src": "/(.*)",
-            "dest": "/server.js"
+            "dest": "/"
         }
     ]
 }
