--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,12 +1,15 @@
 {
     "version":2,
     "builds": [
-        { "src": "app.js", "use": "@vercel/node" }
+        {
+            "src": "./server.js",
+            "use": "@vercel/node" 
+        }
     ],
     "routes" : [
         {
             "src": "/(.*)",
-            "dest": "/app.js"
+            "dest": "/"
         }
     ]
 }
