--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,12 +1,15 @@
 {
-    "version":2,
-    "builds": [
-        { "src": "app.js", "use": "@vercel/node" }
-    ],
-    "routes" : [
-        {
-            "src": "/(.*)",
-            "dest": "/app.js"
+    "version": 2,
+    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+    "routes": [
+      {
+        "src": "/api/users",
+        "dest": "app.js",
+        "methods": ["GET"],
+        "headers": {
+          "x-vercel-idle-timeout": 30
         }
+      }
     ]
-}
+  }
+  
