--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,12 +1,12 @@
 {
-    "version": 2,
-    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-    "routes": [
-      {
-        "src": "/api/users",
-        "dest": "app.js",
-        "methods": ["GET"]
-      }
+    "version":2,
+    "builds": [
+        { "src": "app.js", "use": "@vercel/node" }
+    ],
+    "routes" : [
+        {
+            "src": "/api",
+            "dest": "/app.js"
+        }
     ]
-  }
-  
+}
