--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -5,7 +5,7 @@
     ],
     "routes" : [
         {
-            "src": "/api",
+            "src": "/(.*)",
             "dest": "/app.js"
         }
     ]
