--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
-    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
     "routes": [
       {
         "src": "/api/users",
-        "dest": "/app.js",
+        "dest": "/server.js",
         "methods": ["GET"]
       },
       {
         "src": "/(.*)",
-        "dest": "/app.js"
+        "dest": "/server.js"
       }
     ]
   }
