--- a/shop_BackEnd/package.json
+++ b/shop_BackEnd/package.json
@@ -2,13 +2,13 @@
   "name": "shop_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "vercelserver.js",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node vercelserver.js"
   },
   "author": "",
   "license": "ISC",
