--- a/shop_BackEnd/vercel.json
+++ b/shop_BackEnd/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "shop_backend",
     "builds": [
-       { "src": "vercelapp.js", "use": "@vercel/node" }
+       { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/vercelapp.js" }
+       { "src": "/(.*)", "dest": "/app.js" }
     ]
  }
