--- a/shop_frontend/package.json
+++ b/shop_frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.16.2",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
